--- a/style.css
+++ b/style.css
@@ -23,6 +23,18 @@ body {
     align-items: center;
 }
 
+.spb {
+    justify-content: space-between;
+}
+
+.fdr {
+    flex-direction: row;
+}
+
+.fdc {
+    flex-direction: column;
+}
+
 a {
     text-decoration: none;
     display: inline-block;
@@ -33,8 +45,7 @@ a {
 header {
 
     background: white;
-    width: calc(100vw - 280px);
-    margin: 0 auto;
+
 
 }
 
@@ -46,6 +57,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 20px 0px;
+    width: calc(100vw - 280px);
+    margin: 0 auto;
 }
 
 nav .title-area {
@@ -88,15 +101,204 @@ nav .title-area {
 
 }
 
-.contact-button button {
+.contact-button button,
+.endroll-button button {
     border-radius: 12px;
     background: rgb(254, 163, 1);
     padding: 10px 60px;
     border: none;
 }
 
-.contact-button button a {
+.contact-button button a,
+.endroll-button button a {
     font-size: 20px;
     font-weight: 600;
     color: white;
+}
+
+/* ==================================================================Hero Section Design Start===================================================================================> */
+
+.hero-section {
+    width: calc(100vw - 280px);
+    margin: 0 auto;
+    gap: 50px;
+
+}
+.hero-content{
+    gap: 24px;
+}
+.hero-content h1 {
+    font-family: Quicksand;
+    font-size: 56px;
+    font-weight: 700;
+    color: rgb(17, 17, 17);
+}
+
+.hero-content #yellow {
+    color: rgb(254, 163, 1);
+}
+
+.hero-content #aqua {
+    color: rgb(1, 172, 253);
+}
+
+.hero-content p {
+    color: rgb(17, 17, 17);
+    font-family: Quicksand;
+    font-size: 20px;
+    font-weight: 400;
+    width: 65%;
+}
+
+.endroll-button button{
+    padding: 10px 45px;
+    background-color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ======================================================================Responsive Design For Mobile ============================================================== */
+/* ======================================================================Responsive Design For Mobile ============================================================== */
+
+
+
+@media screen and (max-width: 576px) {
+
+    /* ==========================================================Navigation  Bar Design Start============================== */
+
+
+
+
+
+    nav {
+        width: calc(100vw - 40px);
+
+    }
+
+    .logo img {
+        width: 70%;
+    }
+
+    .title-area .title {
+        display: none;
+    }
+
+    .menu-list {
+        display: none;
+    }
+
+    .contact-button {
+        display: none;
+    }
+
+    .hide {
+        display: block;
+        font-size: 1.5rem;
+    }
+
+    hr {
+        border: 0.5px solid rgb(254, 163, 1);
+    }
+
+
+
+
+
+
+/* ==================================================================Hero Section Design Start===================================================================================> */
+
+.hero-section {
+    width: calc(100vw - 40px);
+    margin: 0 auto;
+    gap: 50px;
+    flex-direction: column-reverse;
+    margin-top: 30px;
+    
+
+}
+.hero-content{
+    gap: 18px;
+    text-align: center;
+}
+.hero-content h1 {
+    font-size: 32px;
+   
+}
+
+.hero-content p {
+    font-size: 14px;
+    font-weight: 500;
+    width: 98%;
+    margin: 0 auto;
+}
+
+.endroll-button button{
+    padding: 10px 24px;
+    background-color: black;
+    font-size: 1rem;
+    font-weight: 700;
+}
+.endroll-button button a{
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.hero-photo img{
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
