--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ nav {
     margin: 0 auto;
 }
 
+
+
 nav .title-area {
     gap: 16px;
 }
@@ -77,6 +79,35 @@ nav .title-area h1 {
     transition: 0.3s;
 
 }
+
+
+.scrolling {
+    width: calc(100vw - 280px);
+    margin: 25px auto;
+    display: flex;
+    border: 1px solid rgb(1, 172, 253);
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+    white-space: nowrap;
+    border-radius: 4px;
+}
+
+.scrolling p {
+    font-size: 1rem;
+    background-color: rgb(1, 172, 253);
+    color: white;
+    z-index: 2;
+    font-weight: 700;
+    padding: 5px 10px;
+}
+
+.scrolling marquee {
+    margin: 0px 10px;
+    font-weight: 500;
+    color: #B80130;
+}
+
 
 .menu-list ul {
     gap: 32px;
@@ -644,15 +675,46 @@ ul li a:hover::after {
 @media only screen and (min-width: 200px) and (max-width: 576px) {
 
 
+    header{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: baseline;
+    }
 
+    nav {
+        order: 1;
+    }
 
+    .scrolling {
+        width: calc(100vw - 0px);
+        margin: 10px auto;
+        order: 3;
+        border-radius: 0px;
+        border-right: none;
 
+    }
 
+    .scrolling p{
+        font-size: 0.75rem;
+    }
+
+    .scrolling marquee{
+        margin: 0px 2px;
+        font-size: 0.9rem;
+    }
+
+    
+
+    .hero-section {
+        order: 4;
+    }
 
     /* ==========================================================Navigation  Bar Design Start============================== */
 
     nav {
         width: calc(100vw - 40px);
+        order: 1;
 
     }
 
@@ -675,10 +737,13 @@ ul li a:hover::after {
     .hide {
         display: block;
         font-size: 1.5rem;
+        order: 2;
     }
 
     hr {
         border: 0.5px solid rgb(254, 163, 1);
+        width: 100%;
+
     }
 
 
@@ -906,6 +971,12 @@ ul li a:hover::after {
         width: calc(100vw - 40px);
     }
 
+    .scrolling {
+        width: calc(100vw - 40px);
+        margin: 15px auto;
+
+    }
+
 
     .menu-list ul {
         display: none;
@@ -1040,6 +1111,7 @@ ul li a:hover::after {
 @media only screen and (min-width: 769px) and (max-width:992px) {
 
 
+
     /* Nav Section===============================================================> */
     nav {
         width: calc(100vw - 40px);
@@ -1049,6 +1121,12 @@ ul li a:hover::after {
     .contact-button {
         display: none;
         justify-content: space-between;
+    }
+
+    .scrolling {
+        width: calc(100vw - 40px);
+        margin: 20px auto;
+
     }
 
 
@@ -1165,6 +1243,11 @@ ul li a:hover::after {
     }
 
 
+    .scrolling {
+        width: calc(100vw - 40px);
+        margin: 20px auto;
+
+    }
 
     /* Hero Section===============================================================> */
 
@@ -1219,11 +1302,11 @@ ul li a:hover::after {
 
     }
 
-    .c-3{
+    .c-3 {
         align-self: flex-start;
     }
 
-   
+
 
 
 
@@ -1267,7 +1350,5 @@ ul li a:hover::after {
 
 
 
-
-}
 
 }
